# admiral-frendor

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .sourcery.yaml  .yamllint.yml  404.html  Makefile  README.md  ansible.cfg  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.r  requirements.txt  requirements.yml  search.html  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md  labeller.yml
.github/instructions/: docs.instructions.md  python.instructions.md
.github/workflows/: build-docker-image.yml  publish-gh-pages.yml  publish-ght-pages.yml  pull-request-labeller.yml  run-all-tests.yml
ansible/playbooks/: create_buckets.yml
collections/local/admiral_fendor/: README.md  galaxy.yml
docs/: Makefile  _config.yml  conf.py  index.md  index.rst  make.bat  mkdocs.yml  page-1.md
docs/docs/: index.md
getting-started/: index.html
notebooks/: demo.ipynb  dummy.ipynb
playbooks/: dummy.yml
reports/: ansible_for_python_and_data.tex  latex-example.tex  r-markdown-example.Rmd
search/: search_index.json
src/admiral_frendor/: __init__.py  config.py
src/admiral_frendor/core/: __init__.py
src/admiral_frendor/plugin/actions/: dummy_api_call.py
src/ansible_collections/: __init__.py
src/ansible_collections/admiral_frendor/: __init__.py
tests/admiral_frendor/dummy/: test_dummy_api_call.py
tests/community/general/: test_random_passwords.py
tests/core/: test_file_finder_service.py
tests/helpers/: __init__.py
tests/plugins/action/: test_dummy_api_call.py
(+7 files in other folders)
