[project]
name = "admiral_frendor"
version = "0.0.1"
description = "Dedicated to the Arago Rock Lighthouse in episode 16 (The Lighthouse Dwellers)."
authors = [{ name = "Joe Collins", email = "joejcollins@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible",
    "ansible-lint",
    "debugpy",
    "google-auth",            # Required by google.cloud collection.
    "google-cloud-storage",   # Required by google.cloud collection.
    "ipykernel",
    "loguru",
    "mkdocs-mermaid2-plugin",
    "mkdocs",
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pydantic",
    "pytest-cov",
    "pytest",
    "python-dotenv",
    "ruff",
    "typer",
    "types-tqdm",
    "yamllint",
    "xkcdpass",               # Required by Ansible community.general collection for password generation.
]

[tool.pytest.ini_options]
log_cli = false
addopts = "-q --disable-warnings --cache-clear"
testpaths = ["./tests"]

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I", "PL", "D"]
lint.ignore = ["D203", "D213"]
lint.fixable = ["ALL"]
line-length = 80

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = ["bifrost.*"]
follow_untyped_imports = true

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"
